# shc---major-project-

./: .gitignore  README.md  add_code_screenshots.py  generate_report.py  inspect_tables.py
shc-backend/: .dockerignore  .env.example  .gitignore  Dockerfile  demo-backend.ps1  go.mod  go.sum  package.json  r2-cors.local.json  readme.md
shc-backend/.tmp/: dbpeek.go
shc-backend/cmd/: jobs.go  main.go  risk.routes.go  routes.go
shc-backend/handlers/: root.handler.go
shc-backend/middlewares/: auth.middleware.go
shc-backend/models/: file.go  session.go  stripe-transaction.go  subscription-plan.go  subscription.go  user.go
shc-backend/services/: auth.service.go  blockchain.service.go  cache_keys.go  cron.service.go  db.service.go  email.service.go  file.service.go  rate_limit_storage.go  redis.service.go  risk_baseline.service.go  risk_scoring.service.go  s3.service.go  services.go  session.service.go  subscription-plan.service.go  subscription.service.go  user.service.go
shc-backend/utils/: password.go
shc-cli/: .gitignore  Cargo.toml  readme.md
shc-cli/src/: api_client.rs  cli.rs  consts.rs  main.rs  models.rs  tui.rs  user_config.rs  utils.rs
shc-cli/src/command/: add.rs  auth.rs  get.rs  list.rs  mod.rs  remove.rs  rename.rs  visibility.rs
shc-frontend/: .env.example  DEPLOY_VERCEL.md  README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts
shc-frontend/public/: install.sh
shc-frontend/src/: middleware.ts
shc-risk-ml-service/: .dockerignore  .gitignore  Dockerfile  README.md  requirements.txt  start.ps1
(+106 files in other folders)
