[package]
name = "shc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.4.13"
dialoguer = "0.11.0"
dirs = "5.0.1"
serde =  {version = "1.0.195", features = ["derive"]} 
toml = "0.8.8"
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
mime_guess = "2.0.4"
console = "0.15.8"
chrono = "0.4.31"
serde_json = "1.0.111"
indicatif = "0.17.7"
async-stream = "0.3.5"
tokio-util = "0.7.10"
tokio-stream = "0.1.14"
zip = "0.6.6"
async-recursion = "1.0.5"
ignore = "0.4.22"
timeago = "0.4.2"
tempfile = "3.9.0"

[profile.release]
strip = true
opt-level = "z"
lto = true
panic = "abort"
